WIP bulk RESP parsing

--- a/DistributedCache/appsettings.json
+++ b/DistributedCache/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
   "ServerIP": "127.0.0.1",
-  "ServerPort": 9500
+  "ServerPort": 9500,
+  "BatchSize": 100,
+  "BatchCommands": true // make sure server also has batch commands enabled
 }
